=========================================================================
CHANGE LOG
=========================================================================

Changes up to 0.99

    beta12

    * fixed setting side effects bug introduced in beta 11

    * faster transparency drawing (sorting)

    beta11

    * fixed some longstanding but minor ranging errors in isomesh and
      isosurf 

    * map_trim command

    beta10

    * cartoon_loop_cap and cartoon_tube_cap settings

    * fixed latent memory-crash bug in align
    
    * fixed min/max issues with maps, alignment, and extents (blush)
    
    * fixed a couple bugs in p1m parsing

    * now supporting wildcards and name lists for most commands
      which previously took either a name or selection updates...massive
      changes to "executive" source code, so there may be new bugs...

    * new workaround for amber-like PDB files.

    * incorporated a sampled subset of the Dunbrack backbone-dependent
      rotamers at 10, 20, and 60 degrees based on > 1% occurence

    * incorporated the Dunbrack backbone independent rotamers
    
    * better cartoons for nucleic acids
        ribbon/cartoon_nucleic_acid_modes: 0, 1, 2, 3, and 4 
        cartoon_ring_mode:  0, 1, 2
        cartoon_ring_finder: 1, 2, 3
        cartoon_ring_color, cartoon_ring_width
        
    * normals now generated in a more sensible fashion for nucleic acid cartoons */

    * rank_assisted_sorts enables us to handle those insane PDB
      structures where residue 118 preceeds 118A and 123A preceeds 123,
      without introducing breaks in the ribbon or cartoon structure

    * fixed attachment of amino acids at the N-terminus

    * fixed a few bugs in the molecular editor 

    * preliminary work on "h_fix" command

    beta09

    * now ignoring SCALEn if it is the identity matrix

    * pdb parser now pays attention to column information in the
      atom name field for inferring ambiguous element symbols
